Adicionando rotas e controller de Materiais.
